#3777 second fix.. spacing on tags in timeline

--- a/web/volume/slot.styl
+++ b/web/volume/slot.styl
@@ -265,8 +265,7 @@ input[type='text'].slot-timeline-time, .slot-timeline-control > button
 
 .slot-tags
   margin-top b1
-  margin-bottom b3
-
+  
 .slot-tag-segment
 .slot-tag-keyword
 .slot-tag-vote
